--- a/Staminaze/CMakeLists.txt
+++ b/Staminaze/CMakeLists.txt
@@ -1,12 +1,5 @@
-﻿# CMakeList.txt : CMake project for Staminaze, include source and define
-# project specific logic here.
-#
+﻿# Build files for the Game 
+project(StaminazeExecutable)
+set(SOURCES main.cpp) 
 
-# Add source to this project's executable.
-add_executable (Staminaze "Main.cpp" )
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET Staminaze PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: Add tests and install targets if needed.
+add_executable( STAMINAZE_${PROJECT_NAME} ${SOURCES} ) 
