-Changed to SDL2 - Added very minimal Texture Support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(Staminaze)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True) 
 
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug") 
+	add_compile_definitions("__DEBUG__")
+endif() 
+
 add_subdirectory(Staminaze) 
 add_subdirectory(Core) 
 
