--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Staminaze)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True) 
 
-if (${CMAKE_BUILD_TYPE} STREQUAL "Debug") 
+if (CMAKE_BUILD_TYPE STREQUAL "Debug") 
 	add_compile_definitions("__DEBUG__")
 endif() 
 
