--- a/Staminaze/CMakeLists.txt
+++ b/Staminaze/CMakeLists.txt
@@ -1,5 +1,10 @@
 ﻿# Build files for the Game 
 project(StaminazeExecutable)
-set(SOURCES main.cpp) 
+set(SOURCES 
+	Main.cpp
+	Game.cpp 
+	GraphicsSystem.cpp
+	CollisionSystem.cpp
+) 
 
-add_executable( STAMINAZE_${PROJECT_NAME} ${SOURCES} ) 
+add_executable( STAMINAZE_${PROJECT_NAME} ${SOURCES}  "Game.cpp" "CollisionSystem.h") 
