Added physics woohoo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿cmake_minimum_required(VERSION 3.26) 
-project(Staminaze)
+project(Game)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True) 
 
@@ -7,7 +7,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 	add_compile_definitions("__DEBUG__")
 endif() 
 
-add_subdirectory(Staminaze) 
+add_subdirectory(Game) 
 add_subdirectory(Core) 
 
-target_link_libraries(STAMINAZE_StaminazeExecutable STAMINAZE_CoreLib)
+target_link_libraries(Game CoreLib)
