--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -7,14 +7,14 @@ set(SOURCES
 	src/EventHandler.cpp
 )
 add_subdirectory(vendor/SDL)
-add_library(STAMINAZE_${PROJECT_NAME} ${SOURCES}) 
-target_include_directories(STAMINAZE_${PROJECT_NAME} PUBLIC 
+add_library(${PROJECT_NAME} ${SOURCES} "include/AppState.h") 
+target_include_directories(${PROJECT_NAME} PUBLIC 
 	include
 	vendor/SDL/include
 )
 
 if(MINGW) 
-	target_link_libraries(STAMINAZE_${PROJECT_NAME} mingw32)
+	target_link_libraries(${PROJECT_NAME} mingw32)
 endif()
 
-target_link_libraries(STAMINAZE_${PROJECT_NAME} SDL2::SDL2main SDL2::SDL2)
+target_link_libraries(${PROJECT_NAME} SDL2::SDL2main SDL2::SDL2)
