--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Core/vendor/SDL"]
 	path = Core/vendor/SDL
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "Common/vendor/enet"]
+	path = Common/vendor/enet
+	url = https://github.com/lsalzman/enet.git
