--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -1,13 +1,24 @@
 ﻿# Build files for the Game 
 project(Game)
 
-set(SOURCES 
-	Main.cpp
-	Game.cpp 
+set(_SHARED_SOURCES  
 	Systems/GraphicsSystem.cpp
 	Systems/PhysicsSystem.cpp
-	Systems/PlayerInputSystem.cpp
 ) 
 
-add_executable( ${PROJECT_NAME} ${SOURCES} ) 
-target_include_directories(Game PRIVATE Systems)
+set(CLIENT_SOURCES 
+	Client/Main.cpp 
+	Client/Game.cpp 	
+	Systems/ClientEventSystem.cpp
+)
+
+set(SERVER_SOURCES
+	Server/Main.cpp
+	Server/Game.cpp
+)
+
+add_executable(Server ${SERVER_SOURCES} ${_SHARED_SOURCES})
+add_executable(Client ${CLIENT_SOURCES} ${_SHARED_SOURCES})
+
+target_include_directories(Server PRIVATE Systems)
+target_include_directories(Client PRIVATE Systems)
