Stuff is broken but working on network. Fix client event handler

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -2,23 +2,24 @@
 project(Game)
 
 set(_SHARED_SOURCES  
-	Systems/GraphicsSystem.cpp
-	Systems/PhysicsSystem.cpp
+	Common/GraphicsSystem.cpp
+	Common/PhysicsSystem.cpp
 ) 
 
 set(CLIENT_SOURCES 
 	Client/Main.cpp 
 	Client/Game.cpp 	
-	Systems/ClientEventSystem.cpp
+	Client/ClientEventSystem.cpp
 )
 
 set(SERVER_SOURCES
 	Server/Main.cpp
 	Server/Game.cpp
+	Server/ServerEventSystem.cpp
 )
 
 add_executable(Server ${SERVER_SOURCES} ${_SHARED_SOURCES})
 add_executable(Client ${CLIENT_SOURCES} ${_SHARED_SOURCES})
 
-target_include_directories(Server PRIVATE Systems)
-target_include_directories(Client PRIVATE Systems)
+target_include_directories(Server PRIVATE Common)
+target_include_directories(Client PRIVATE Common)
