<h1> Holy Guacamole </h1> <p> theres AnimationSystem.cpp </p> <p> and cool ECS stuff </p>

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -1,11 +1,11 @@
 ﻿# Build files for the Game 
 project(Game)
 
-set(_SHARED_SOURCES  
+set(SHARED_SOURCES
 	Common/GraphicsSystem.cpp
-	Common/PhysicsSystem.cpp
 	Common/CreateScenes.cpp
-) 
+	Common/AnimationSystem.cpp
+)
 
 set(CLIENT_SOURCES 
 	Client/Main.cpp 
@@ -14,13 +14,14 @@ set(CLIENT_SOURCES
 )
 
 set(SERVER_SOURCES
+	Server/PhysicsSystem.cpp
 	Server/Main.cpp
 	Server/Game.cpp
 	Server/ServerEventSystem.cpp
 )
 
-add_executable(Server ${SERVER_SOURCES} ${_SHARED_SOURCES})
-add_executable(Client ${CLIENT_SOURCES} ${_SHARED_SOURCES})
+add_executable(Server ${SERVER_SOURCES} ${SHARED_SOURCES})
+add_executable(Client ${CLIENT_SOURCES} ${SHARED_SOURCES})
 
 target_include_directories(Server PRIVATE Common)
 target_include_directories(Client PRIVATE Common)
