--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # Created by https://www.gitignore.io/api/c++,linux,macos,cmake,windows
 # Edit at https://www.gitignore.io/?templates=c++,linux,macos,cmake,windows
 
-# it wont work
 #Editor related 
 .vs/
 .vscode/
 .idea/
-cmake-build-debug/*
-cmake-build-release/*
-cmake-build-relwithdebinfo/*
+cmake-build-debug/
+cmake-build-release/
+cmake-build-relwithdebinfo/
 compile_commands.json
-
+.cache/
 ### C++ ###
 # Prerequisites
 *.d
