Working on new setup

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -37,5 +37,5 @@ if (MSVC)
 elseif(MINGW)
 	target_link_libraries(${PROJECT_NAME} mingw32 SDL2::SDL2main SDL2::SDL2 SDL2_image enet)
 else()
-	target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} SDL2_image enet)
+  target_link_libraries(${PROJECT_NAME} SDL2::SDL2 SDL2_image enet)
 endif()
