--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 ﻿cmake_minimum_required(VERSION 3.26) 
 
 project(Game)
+set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True) 
+
 
 add_subdirectory(Common) 
 add_subdirectory(Game) 
