--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_subdirectory(Common) 
 add_subdirectory(Game) 
 
-target_link_libraries(Server CoreLib)
-target_link_libraries(Client CoreLib)
+target_link_libraries(Server Common)
+target_link_libraries(Client Common)
